some refactoring: added checkUserIsOwnerOfItem(), deleted logging from storage